# tutor-log

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: codeql.yml  docker-image-build-and-push.yml  run-lint-and-test.yml
container/: docker-compose.yml
docs/: account.md  modeling_and_apps.md  monitoring.md  sketch.md  system_architecture.md  user_scenario.md
docs/troubleshooting/: gin_index.md
infra/: docker-compose.yml
infra/db/: init.sql
infra/monitor/prometheus/: prometheus.yml  rules.yml
webapp/: .coveragerc  pytest.ini
webapp/account/: consts.py  managers.py  models.py
webapp/account/migrations/: 0001_initial.py  0002_add_initial_subjects.py  0003_rename_name_user_username.py
webapp/account/static/css/: base.css
webapp/account/templates/registration/: login.html
webapp/common/: models.py
webapp/config/: celery.py  urls.py
webapp/config/settings/: base.py  local.py  test.py
webapp/tests/: test_api.py
