[tool.poetry]
name = "tutor-log"
version = "0.1.0"
description = ""
authors = ["Jong012 <Jong012>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"
drf-spectacular = "^0.27.2"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
django-phonenumber-field = "^8.0.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.9.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
factory-boy = "^3.3.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
ruff = "^0.6.4"
pyright = "^1.1.379"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
