[tool.poetry]
name = "tutor-log"
version = "0.1.0"
description = ""
authors = ["Jong012 <Jong012>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<5.0"
drf-spectacular = "^0.27.2"
django-filter = "^24.3"
djangorestframework = "^3.15.2"
django-phonenumber-field = "^8.0.0"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
redis = "^5.1.0"
django-celery-results = "^2.5.1"
gevent = "^24.2.1"
django-prometheus = "^2.3.1"
flower = "^2.0.1"
python-dotenv = "^1.0.1"
social-auth-app-django = "^5.4.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.9.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
factory-boy = "^3.3.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
ruff = "^0.6.4"
pyright = "^1.1.379"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
pre-commit = "^3.8.0"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 80
indent-width = 4

# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"